--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Pottery Idea Generator</title>
-  <link rel="stylesheet" type="text/css" href="/potteryideas/scripts.js">
+  <link rel="stylesheet" type="text/css" href="/potteryideas/styles.css">
 </head>
 <body>
   <div class="container">
@@ -18,6 +18,6 @@
     </div>
   </div>
 
-  <script src="/potteryideas/scripts.js" async></script>
+  <script src="scripts.js" async></script>
 </body>
 </html>
