--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <title>Pottery Idea Generator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.4.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
@@ -20,6 +19,6 @@
     </div>
   </div>
 
-  <script src="scripts.js" async></script>
+  <script src="script.js" async></script>
 </body>
 </html>
